# deaddrop-rs

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  logs.txt
src/: encryption.rs  logging.rs  main.rs  new.rs  read.rs  send.rs  session.rs
src/db/: db.rs  messages.rs  mod.rs  users.rs
