[package]
name = "deaddrop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
bcrypt = "0.13.0"
rpassword = "7.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "0.4.17"
log4rs = "1.2.0"
dotenv = "0.15.0"
rsa = "0.8.1"
rand = "0.8.5"
pkcs8 = "0.9.0"
hex = "0.4.3"